# azure-policy

./: .checkov.yaml  .env.template  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .secrets.allowlist  .secrets.baseline  .secrets.yaml  .tflint.hcl  .zshrc  Makefile  README.md  TROUBLESHOOTING.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  azure-policy.code-workspace  debug-ci-environment.sh  install.sh  local.settings.json  mypy.ini  pyproject.toml  pyrightconfig-precommit.json  pyrightconfig.json  requirements.txt  run-tests.py  run-tests.sh  start-functions.sh
.cline/: rules
.cline/context/: azure-conventions.md  terraform-standards.md  workflow-patterns.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh  requirements.txt
.github/: copilot_instructions.md  dependabot.yml
.github/instructions/: memory.instruction.md
.github/workflows/: dependabot-test.yml  deploy-function-self-hosted.yml  deploy-function.yml  docs-structure-check.yml  pre-commit.yml  terraform-apply.yml  terraform-destroy.yml  terraform-validate.yml
docs/: AZURE_SECRETS_SETUP.md  AZURITE.md  DATABASE_DEPLOYMENT_SUMMARY.md  DATABASE_KEYVAULT_INTEGRATION.md  DATABASE_SECURITY_GUIDE.md  DEPENDABOT_ANALYSIS_RESULTS.md  DEPENDABOT_PERMISSIONS_FIX.md  DEPENDABOT_TERRAFORM_CLOUD_SETUP.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_DATABASE.md  DEPLOYMENT_SUMMARY.md  DETECT_SECRETS_GUIDE.md  DEVCONTAINER_FIXES.md  DEVCONTAINER_TESTING.md  FUNCTIONS.md  FUNCTIONS_APP_WORKFLOW_FIX.md  FUNCTION_APP_DEPLOYMENT_SUCCESS.md  FUNCTION_DEPLOYMENT_GUIDE.md  FUNCTION_DEPLOYMENT_PROGRESS_NOTES.md  FUNCTION_DEPLOYMENT_TROUBLESHOOTING.md  GITHUB_ACTIONS_FIX_SUMMARY.md  GITHUB_ACTIONS_FUNCTION_SELECTION.md  GITHUB_ACTIONS_PRE_COMMIT.md  GITHUB_RUNNER_QUICK_START.md  GITHUB_SECRETS_SETUP.md  MANUAL_CLEANUP_GUIDE.md  MODULAR_TERRAFORM_SETUP.md  MODULES_ARCHITECTURE.md  MODULES_REGISTRY.md  MODULE_SUMMARY_DATABASE.md  NOTEBOOKS.md  POLICIES.md  PRE_COMMIT_INTEGRATION.md  PROJECT_STATUS_UPDATE.md  README.md  REQUIREMENTS.md  REQUIREMENTS_GUIDE.md  SERVICE_BUS_INTEGRATION.md  TERRAFORM_CLOUD_CHECKLIST.md  TERRAFORM_CLOUD_GITHUB_ACTION_FIX.md  (+19 more)
functions/: __init__.py
functions/advanced/: .funcignore  README.md  __init__.py  function_app.py  host.json  local.settings.json  pytest.ini  requirements-test.txt  requirements.txt  setup-connection.sh
functions/basic/: .funcignore  README.md  __init__.py  function_app.py  host.json  local.settings.json.template  requirements-test.txt  requirements.txt  test_mocks.py
functions/common/: README.md  __init__.py  decorators.py  logging_config.py  telemetry.py
functions/infrastructure/: .funcignore  README.md  __init__.py  function_app.py  host.json  local.settings.json.template  requirements-test.txt  requirements.txt
infrastructure/: README.md
infrastructure/app-service/: .terraform.lock.hcl  Makefile  README.md  main.tf  outputs.tf  variables.tf
infrastructure/core/: .terraform.lock.hcl  Makefile  README.md  main.tf  main.tf.local  outputs.tf  variables.tf
infrastructure/database/: .terraform.lock.hcl  Makefile  README.md  main.tf  outputs.tf  terraform.tfvars.example  test-keyvault-integration.sh  variables.tf
infrastructure/functions/: Makefile  README.md  main.tf  main.tf.backup  outputs.tf  variables.tf
infrastructure/functions-app/: .terraform.lock.hcl  Makefile  README.md  main.tf  outputs.tf  variables.tf
infrastructure/github-runner/: .gitignore  Makefile  README.md  main.tf  outputs.tf  runner-setup.sh  terraform-cloud.tf.backup  terraform.tfvars.example  variables.tf
infrastructure/infrastructure/: README.md  main.tf  outputs.tf  variables.tf
infrastructure/monitoring/: .terraform.lock.hcl  Makefile  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/policies/: .terraform.lock.hcl  Makefile  README.md  main.tf  outputs.tf  variables.tf
infrastructure/service-bus/: .terraform.lock.hcl  Makefile  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/terraform/: .terraform.lock.hcl  README.md  main.tf  main.tf.backup  main.tf.local  main.tf.new  outputs.tf  terraform.tfvars.example  variables.tf
notebooks/: environment_validation.ipynb
policies/: FUNCTION-HTTPS-POLICY.md  README.md  enforce-function-app-https-only.json  resource-group-naming.json  storage-naming-convention.json  storage-naming-parameters.json  storage-naming-rule.json
requirements/: base.txt  dev.txt  functions-test.txt  functions.txt  test.txt
scripts/: 01-list-policies.ps1  01-list-policies.sh  02-show-policy-details.ps1  02-show-policy-details.sh  03-list-assignments.ps1  03-list-assignments.sh  04-create-assignment.sh  05-compliance-report.ps1  05-compliance-report.sh  06-list-initiatives.sh  07-create-custom-policy.sh  08-remediation.sh  Install-PowerShellModules.ps1  README.md  Setup-PowerShellProfile.ps1  check-github-secrets.sh  check-syntax.sh  cleanup-all.sh  cleanup-azurite.sh  cleanup-terraform-cloud.sh  cleanup-terraform-variables.sh  commit-terraform-cloud-changes.sh  configure-terraform-cloud-workspace.sh  debug-devcontainer.sh  deploy-function-https-policy.ps1  deployment-with-public-access.sh  devcontainer-tools.sh  diagnose-function-access.sh  fix-keyvault-permissions.sh  manage-terraform-variables.sh  menu.sh  organize-docs.sh  post-install.sh  pre-commit-terraform-test.sh  publish-module-api.sh  quick-rebuild-devcontainer.sh  recreate-workspaces.sh  setup-terraform-cloud-org.sh  setup-terraform-cloud-variables.sh  setup-terraform-cloud-vars.sh  (+14 more)
scripts/reports/: Allowed_locations_20250722-020031.txt  Allowed_locations_20250722-020051.txt  Allowed_locations_20250722-020203.txt  Allowed_locations_20250722-020422.txt  policy-assignments_20250722-020804.txt  policy-assignments_20250722-020819.txt  subscription_compliance-report_20250722-021406.txt
tests/: __init__.py  conftest.py
tests/integration/: test_azure_cli_integration.py
tests/policies/: test_existing_policies.py  test_policy_fragments.py  (+1 more)
(+26 files in other folders)
