[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-policy"
description = "Azure Policy and Functions Management"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "Stuart Shay", email = "stuartshay@example.com"}]
keywords = ["azure", "policy", "functions", "terraform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13"
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | azurite-data
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["common"]
known_third_party = ["azure", "opencensus", "pydantic", "pytest", "requests", "aiohttp"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
remove_redundant_aliases = true
combine_as_imports = true
force_sort_within_sections = true
lexicographical = true
group_by_package = true
skip = [".venv", "venv", "__pycache__", "site-packages", "azurite-data"]
skip_glob = ["**/migrations/**", "**/.venv/**", "**/venv/**"]

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true
remove-duplicate-keys = true
ignore-init-module-imports = true
recursive = true
expand-star-imports = true
ignore-pass-statements = true
exclude = [
    "__pycache__",
    ".venv",
    "venv",
    "migrations",
    "site-packages",
    "azurite-data",
    "tests"
]

[tool.pylint]
load-plugins = []
jobs = 0
persistent = "yes"
py-version = "3.13"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
    "too-few-public-methods",
    "too-many-arguments",
    "unused-argument",
    "import-outside-toplevel",
    "duplicate-code",
    "unused-import",
    "broad-exception-caught",
    "broad-exception-raised",
    "import-error",
    "no-member",
    "pointless-string-statement",
    "global-statement",
    "logging-fstring-interpolation",
    "wrong-import-position",
    "unused-variable",
    "pointless-statement",
    "logging-too-many-args"
]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
warn_unused_ignores = true
strict_optional = true
mypy_path = "stubs:functions"
namespace_packages = true
explicit_package_bases = true
warn_no_return = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "functions.*.tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "azure.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opencensus.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "functions.common.*"
ignore_missing_imports = true
disallow_untyped_defs = false
