[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "wheel", "setuptools_scm"]

[project]
authors = [{name = "Stuart Shay", email = "stuartshay@example.com"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
description = "Azure Policy and Functions Management"
keywords = ["azure", "policy", "functions", "terraform"]
license = {text = "MIT"}
name = "azure-policy"
readme = "README.md"
requires-python = ">=3.13"

[tool.black]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | azurite-data
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py313']

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_sort_within_sections = true
group_by_package = true
include_trailing_comma = true
known_first_party = ["common"]
known_third_party = ["azure", "opencensus", "pydantic", "pytest", "requests", "aiohttp"]
lexicographical = true
line_length = 88
multi_line_output = 3
profile = "black"
remove_redundant_aliases = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = [".venv", "venv", "__pycache__", "site-packages", "azurite-data"]
skip_glob = ["**/migrations/**", "**/.venv/**", "**/venv/**"]
use_parentheses = true

[tool.autoflake]
exclude = [
  "__pycache__",
  ".venv",
  "venv",
  "migrations",
  "site-packages",
  "azurite-data",
  "tests",
]
expand-star-imports = true
ignore-init-module-imports = true
ignore-pass-statements = true
in-place = true
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.pylint]
jobs = 0
load-plugins = []
persistent = "yes"
py-version = "3.13"

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "invalid-name",
  "too-few-public-methods",
  "too-many-arguments",
  "unused-argument",
  "import-outside-toplevel",
  "duplicate-code",
  "unused-import",
  "broad-exception-caught",
  "broad-exception-raised",
  "import-error",
  "no-member",
  "pointless-string-statement",
  "global-statement",
  "logging-fstring-interpolation",
  "wrong-import-position",
  "unused-variable",
  "pointless-statement",
  "logging-too-many-args",
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = "stubs:functions"
namespace_packages = true
no_implicit_optional = true
python_version = "3.13"
strict_optional = true
warn_no_return = false
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
disallow_incomplete_defs = false
disallow_untyped_defs = false
module = "tests.*"

[[tool.mypy.overrides]]
disallow_incomplete_defs = false
disallow_untyped_defs = false
ignore_missing_imports = true
module = "functions.*.tests.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "azure.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "opencensus.*"

[[tool.mypy.overrides]]
disallow_untyped_defs = false
ignore_missing_imports = true
module = "functions.common.*"
